--- a/Pigit/Pigit/Pigit.csproj
+++ b/Pigit/Pigit/Pigit.csproj
@@ -46,4 +46,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Items\Abstracts\" />
+  </ItemGroup>
 </Project>
