--- a/Pigit/Pigit/Pigit.csproj
+++ b/Pigit/Pigit/Pigit.csproj
@@ -47,6 +47,6 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Items\Abstracts\" />
+    <Folder Include="Factory\" />
   </ItemGroup>
 </Project>
