inputs solid gemaakt
input menu solid voor meerdere instanties. Mogelijkheid om te switchen tussen werelden bij de warp points

--- a/Pigit/Pigit/Pigit.csproj
+++ b/Pigit/Pigit/Pigit.csproj
@@ -49,5 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Factory\" />
+    <Folder Include="Text\Interface\" />
   </ItemGroup>
 </Project>
